# FFmpeg07V2

./: settings.gradle
ProcessDaemon/: CMakeLists.txt  build.gradle
ProcessDaemon/src/androidTest/java/sen/com/ffmpeg07v2/: ExampleInstrumentedTest.java
ProcessDaemon/src/main/: AndroidManifest.xml
ProcessDaemon/src/main/cpp/: NativeDaemon.h  SocketNativeDaemon.h  native-lib.cpp  socket_deamon.cpp
ProcessDaemon/src/main/java/sen/com/ffmpeg07v2/: MainActivity.java  NativeDaemon.java  ProcessWatcherService.java  SocketNativeDaemon.java  SocketWatcherService.java
ProcessDaemon/src/main/res/layout/: activity_main.xml
ProcessDaemon/src/main/res/values/: strings.xml
ProcessDaemon/src/test/java/sen/com/ffmpeg07v2/: ExampleUnitTest.java
ffmpegv1/: CMakeLists.txt  build.gradle
ffmpegv1/src/androidTest/java/com/example/vulcantseries/buildndk/: ExampleInstrumentedTest.java
ffmpegv1/src/main/: AndroidManifest.xml
ffmpegv1/src/main/cpp/: ffmpeg_jni.cpp  ffmpeg_jni.h
ffmpegv1/src/main/java/com/example/vulcantseries/buildndk/: MainActivity.java
ffmpegv1/src/main/jniLibs/include/libavformat/: network.h  os_support.h
ffmpegv1/src/main/jniLibs/include/libavutil/: libm.h
ffmpegv1/src/main/res/layout/: activity_main.xml
ffmpegv1/src/main/res/values/: strings.xml
ffmpegv1/src/test/java/com/example/vulcantseries/buildndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
